<resources>

<!--    Google play service-->
    <string name="what_do_you_mean">434265531495-vr1rbpp9vdrvgf2e12omerld81j7o871.apps.googleusercontent.com</string>

<!--App level-->
    <string name="app_name">LoveMusic</string>

<!-- Auth String related-->
    <string name="google_register_btn_text">Daftar atau Masuk dengan akun Google</string>
    <string name="facebook_register_btn_text">Daftar atau Masuk dengan akun Facebook</string>
    <string name="apple_register_btn_text">Daftar atau Masuk dengan akun Apple</string>
    <string name="register_moto">"Dengarkan dan Bagikan\nMusikmu"</string>
    <string name="register_quote_text">"Music express that\nwhich cannot put into words"</string>
    <string name="regiter_quote_writer_text">~ Victor Hugo</string>
    <string name="register_moto_2">"Satu langkah lagi\nuntuk mendengarkan\nmusik kesukaan anda"</string>
    <string name="register_username_hint">Masukan username disini</string>
    <string name="register_btn_daftar">Daftar</string>



</resources>