<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor">



    <FrameLayout
        android:id="@+id/moto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="42dp"
        app:layout_constraintBottom_toTopOf="@id/center_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/register_moto_2"
            android:textAlignment="textStart"
            android:textColor="@color/onPrimary"
            android:textSize="22sp"
            android:lines="3"
            android:textStyle="bold"
    />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/center_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="42dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.fdev.lovemusic.util.customview.TrickyTextField
            android:id="@+id/username_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/register_username_hint"
            app:textSize="16sp"
            app:textColor="@color/onPrimary"
            app:textColorHint="@color/gray_100"
            app:backgroundTint="@color/onPrimary"
            app:errorTextColor="@color/error"
            app:errorTextSize="12sp"
            app:errorText="Ini aku loh"
            />


        <com.fdev.lovemusic.util.customview.TrickyButton
            android:id="@+id/daftar_btn"
            android:layout_marginTop="42dp"
            app:contentPadding="10dp"
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/onPrimary"
            app:onDisableBackgroundColor="@color/gray_100"
            >

            <TextView
                android:text="@string/register_btn_daftar"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.fdev.lovemusic.util.customview.TrickyButton>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/plain_logo"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <TextView
            android:layout_marginStart="12dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/onPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>