<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="42dp"
        android:id="@+id/logo"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/moto"
        android:padding="24dp"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/google_btn"
            android:elevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/google_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/google_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/google_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:text="@string/google_register_btn_text"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/google_logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/facebook_btn"
            android:elevation="8dp"
            app:cardBackgroundColor="#3B5999"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/facebook_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/facebook_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/facebook_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/facebook_register_btn_text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/facebook_logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/apple_btn"
            android:layout_marginTop="28dp"
            android:elevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/apple_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/apple_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/apple_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/apple_register_btn_text"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/apple_logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.cardview.widget.CardView>




    </LinearLayout>


    <TextView
        android:id="@+id/moto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_moto"
        android:textAlignment="center"
        android:textColor="@color/onPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        />


    <TextView
        android:id="@+id/quote"
        android:text="@string/register_quote_text"
        android:textAlignment="center"
        android:textColor="@color/gray_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="2"
        app:layout_constraintBottom_toTopOf="@id/quote_writer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="6dp"
        />

    <TextView
        android:id="@+id/quote_writer"
        android:text="@string/regiter_quote_writer_text"
        android:textAlignment="center"
        android:textColor="@color/gray_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="42dp"
     />



</androidx.constraintlayout.widget.ConstraintLayout>